<resources>
    <string name="app_name">Marvin Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="tournaments">Tournaments</string>
    <string name="achievements">Achievements</string>
    <string name="messages">Messages</string>
    <string name="btRankings">Rankings</string>
    <string name="signin">Sign In</string>
    <string name="typePasswordAgain">Type your password again</string>
    <string name="eMail">e-Mail</string>
    <string name="signIn">Sign In!</string>
    <string name="clear">Clear</string>
    <string name="marvin">MARVIN</string>
    <string name="tournamentManager">tournament manager</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="newAccount">NEW ACCOUNT</string>
    <string name="tournamentHosts">Tournament Hosts</string>
    <string name="mainMenu">Main Menu</string>
    <string name="tournamentList">Tournaments</string>
    <string name="hosts">Hosts</string>
    <string name="notImplementedYet">Not implemented yet!</string>
    <string name="future">This feature will be avaiable on future versions. Thanks!</string>
    <string name="takeMeBack">Take me back!</string>
    <string name="closeApp">Exit</string>
    <string name="logout">Log Out</string>
    <string name="userName">User Name</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="phone">Phone</string>
    <string name="tournamentsPlayed">Tournaments Played</string>
    <string name="earnedPoints">Earned Points</string>
    <string name="earnedAchievements">Earned Achievements</string>
    <string name="userTag">User Tag</string>
    <string name="deleteUser">Delete my user</string>
    <string name="userAccount">User Account</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="consecuencesDelete">All data will be lost. This action can not be undone.</string>
    <string name="yesDeleteMyAccount">Yes, delete my account</string>
    <string name="noKeepMyAccount">No, keep my account</string>
    <string name="youHave">"You have "</string>
    <string name="zero">0</string>
    <string name="unclaimedPrizes">" unclaimed prizes."</string>
    <string name="unclaimedPrizesSingular">" unclaimed prize."</string>
    <string name="incorrectLogin">Incorrect user/password</string>
    <string name="nickname">Public Name</string>
    <string name="no">no</string>
    <string name="nameRequired">Name is required!</string>
    <string name="publicNameRequired">Public name is required!</string>
    <string name="passwordRequired">Password is required!</string>
    <string name="eMailRequired">e-mail is required!</string>
    <string name="phoneNumberRequired">Phone number is required!</string>
    <string name="nameExists">The user with that name exists.</string>
    <string name="passwordNotMatch">The passwords do not match.</string>
    <string name="passwordWillBeSame">The password will be the same</string>
    <string name="date">Date:</string>
    <string name="takePart">Take part!</string>
    <string name="leaveTournament">Uninscribe</string>
    <string name="maxPlayers">Max number of players:</string>
    <string name="passwordNotRequired">Password is not required</string>
    <string name="minPlayers">Min number of players:</string>
    <string name="eula">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="acceptAds">Do you accept ads?</string>
    <string name="acceptConditions">Do you accept conditions?</string>
    <string name="eulaTitle">EULA</string>
    <string name="continuethis">Continue</string>
    <string name="acceptEULA">You must accept the conditions of service before continuing.</string>
    <string name="userDoesntExists">That user name does not exists.</string>
    <string name="finishRound">Finish Round</string>
    <string name="VS">VS</string>
    <string name="endRound">End Round</string>
    <string name="futureTournaments">Future Tournaments</string>
    <string name="inProgressTournaments">Tournaments in Progress</string>
    <string name="publicNameNotNull">The public name has a prohibited word</string>
    <string name="noData">There are no data for this</string>
</resources>
