<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.klaussius.marvin_mobile.ProfileEdit"
    android:id="@+id/cLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:text="@string/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPublicNameInfo"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginTop="15dp" />

            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNameInfo"
                android:layout_marginTop="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPasswordInfo"
                android:text="@string/password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword" />

            <TextView
                android:text="@string/typePasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRepeatPasswordInfo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPasswordAgain" />

            <TextView
                android:text="@string/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmailInfo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etEmail" />

            <TextView
                android:text="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPhoneInfo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etPhone" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lButtons"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <Button
                    android:text="@string/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btAccept"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_light" />

                <Button
                    android:text="@string/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btClear"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_orange_light" />

                <Button
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btCancel"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_red_light" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>