<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_eula_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.klaussius.marvin_mobile.EulaForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/eulaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvEula"
                android:text="@string/eula"
                android:layout_marginTop="15dp" />

            <CheckBox
                android:text="@string/acceptAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbAcceptPublicity"
                android:layout_alignBottom="@+id/cbAcceptConditions"
                android:checked="true"
                android:layout_marginTop="15dp" />

            <CheckBox
                android:text="@string/acceptConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbAcceptConditions"
                android:checked="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <Button
                    android:text="@string/continuethis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btContinue"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_light" />

                <Button
                    android:text="@string/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btCancel"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_red_light" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
