<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.klaussius.marvin_mobile.Profile">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsernameInfo"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsername"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPasswordInfo"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/eMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmailInfo"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvEMail"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btEdit"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_light" />

            <Button
                android:text="@string/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btExit"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
