<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.klaussius.marvin_mobile.ListHosts">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/tournamentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvHostsList"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center"
            android:textColor="@android:color/black"
            tools:text="@string/hosts"
            android:layout_marginTop="15dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvContent"
            android:layout_marginTop="15dp" />

        <Button
            android:text="@string/takeMeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btTakeMeBack"
            android:backgroundTint="@android:color/holo_green_light" />
    </LinearLayout>
</RelativeLayout>
