<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_working"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.klaussius.marvin_mobile.Working">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/notImplementedYet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNotImplemented"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/goblins"
            android:id="@+id/ivGoblin" />

        <TextView
            android:text="@string/future"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFuture"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/takeMeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btTakeMeBack"
            android:layout_marginTop="15dp"
            android:backgroundTint="@android:color/holo_green_light" />

    </LinearLayout>
</RelativeLayout>
